[package]
name = "japonfou_common"
version = "0.1.0"
edition = "2021"
authors = ["boris <boris.lok.tw@outlook.com>"]

[dependencies]

[dependencies.dotenv]
version = "0.15.0"

[dependencies.sqlx]
version = "0.5.13"
features = ["postgres", "runtime-tokio-rustls"]

[dependencies.r2d2_redis]
version = "0.14.0"

[dependencies.thiserror]
version = "1.0.30"

[dependencies.snowflake]
git = "https://github.com/boris-lok/snowflake"
branch = "master"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]
