[package]
name = "japonfou_common"
version = "0.1.0"
edition = "2021"
authors = ["boris <boris.lok.tw@outlook.com>"]

[dependencies]

[dependencies.dotenv]
version = "0.15.0"

[dependencies.sqlx]
version = "0.5.13"
features = ["postgres", "runtime-tokio-rustls"]

[dependencies.r2d2_redis]
version = "0.14.0"

[dependencies.thiserror]
version = "1.0.30"

[dependencies.snowflake]
git = "https://github.com/boris-lok/snowflake"
branch = "master"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.tracing]
version = "0.1.34"

[dependencies.tracing-subscriber]
version = "0.3.11"

[dependencies.tracing-appender]
version = "0.2.2"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.rust_decimal]
version = "1.23.1"
